--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -1,5 +1,6 @@
-$color-white: #fff;
+$color-base: #c9a998;
 $color-black: #01010e;
+$color-white: #fff;
 $color-light-grey: #f6f6f6;
 $color-grey-blue: #f0f3f8;
 $color-grey-blue-darker: #e2e9f5;
@@ -43,5 +44,5 @@ $header-desktop-height: 64px;
 $header-desktop-middle-height: 72px;
 $footer-mobile-menu: 64px;
 $bg-gradient-layer: linear-gradient(to bottom,
-        rgb(41 80 159 / 0%) 0%,
-        rgb(51 51 67 / 52%) 100%);
+                rgb(41 80 159 / 0%) 0%,
+                rgb(51 51 67 / 52%) 100%);
